test/corpus/corpus.txt
================================================================================
Comments
================================================================================

// This is a line comment
/* This is a
   block comment */

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (block_comment))

================================================================================
Simple functions
================================================================================

fn main() -> i32 {
    42
}

fn add(a: i32, b: i64) -> i32 {
    a + b
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    body: (block
          (integer_literal)))
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (binary_expression
          left: (identifier)
          right: (identifier)))))

================================================================================
Statements
================================================================================

fn main() -> i32 {
    let x: i32 = 42;
    x = x + 58;
    x
}

--------------------------------------------------------------------------------

(source_file
  (function_item
  name: (identifier)
  parameters: (parameters)
  return_type: (primitive_type)
  body: (block
    (let_statement
      name: (identifier)
      type: (primitive_type)
      value: (integer_literal))
    (assignment_statement
      name: (identifier)
      value: (binary_expression
        left: (identifier)
        right: (integer_literal)))
    (identifier))))

================================================================================
Booleans
================================================================================

fn mirror(colors: bool) -> bool {
    if colors {};

    false
}

fn main() -> i32 {
    let colors: bool = true;
    let eye: bool = mirror(colors);

    0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (expression_statement
        (if_expression
          condition: (identifier)
          consequence: (block)))
          (boolean_literal)))
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    body: (block
      (let_statement
        name: (identifier)
        type: (primitive_type)
        value: (boolean_literal))
      (let_statement
        name: (identifier)
        type: (primitive_type)
        value: (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier))))
      (integer_literal))))

================================================================================
Nested if expressions
================================================================================

fn main() -> i32 {
    let x: i32 = 1;
    if condition1 {
        let a: i32 = 10;
        a
    } else if condition2 {
        let b: i32 = 20;
        b
    } else {
        let c: i32 = 30;
        c
    }
    // None of a, b, or c are accessible here
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    body: (block
      (let_statement
        name: (identifier)
        type: (primitive_type)
        value: (integer_literal))
      (if_expression
        condition: (identifier)
        consequence: (block
          (let_statement
            name: (identifier)
            type: (primitive_type)
            value: (integer_literal))
          (identifier))
        alternative: (else_clause
          (if_expression
            condition: (identifier)
            consequence: (block
              (let_statement
                name: (identifier)
                type: (primitive_type)
                value: (integer_literal))
              (identifier))
            alternative: (else_clause
              (block
                (let_statement
                  name: (identifier)
                  type: (primitive_type)
                  value: (integer_literal))
                (identifier))))))
    (line_comment))))

================================================================================
Unit
================================================================================

fn print_value(n: i32) -> () {
    // In a real implementation, this might print to stdout
    // For now, it just demonstrates a unit-returning function
    n;
}

fn main() -> i32 {
    let x: () = ();  // Unit literal
    print_value(42);
    0
}

--------------------------------------------------------------------------------

(source_file
  (function_item
  name: (identifier)
  parameters: (parameters
    (parameter
    name: (identifier)
    type: (primitive_type)))
  return_type: (unit_type)
  body: (block
    (line_comment)
    (line_comment)
    (expression_statement
      (identifier))))
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    body: (block
      (let_statement
        name: (identifier)
        type: (unit_type)
        value: (unit_literal)) (line_comment)
      (expression_statement
        (call_expression
          function: (identifier)
          arguments: (arguments
            (integer_literal))))
      (integer_literal))))

================================================================================
Return types
================================================================================

fn zero() -> i32 {
    0
}

fn one() -> i64 {
    1
}

fn colors() -> bool {
    true
}

fn ok() -> () {
    ()
}

fn main() {}

--------------------------------------------------------------------------------

(source_file
  (function_item
  name: (identifier)
  parameters: (parameters)
  return_type: (primitive_type)
  body: (block
    (integer_literal)))
  (function_item
  name: (identifier)
  parameters: (parameters)
  return_type: (primitive_type)
  body: (block
    (integer_literal)))
  (function_item
  name: (identifier)
  parameters: (parameters)
  return_type: (primitive_type)
  body: (block
    (boolean_literal)))
  (function_item
  name: (identifier)
  parameters: (parameters)
  return_type: (unit_type)
  body: (block
    (unit_literal)))
  (function_item
  name: (identifier)
  parameters: (parameters)
  body: (block)))
